--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "vue3-plugin",
     "vue3",
     "vite-config",
-    "vite-"
+    "vite"
   ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build ",
     "run-example": "cd src/example && vite",
+    "test": "vitest",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@storybook/addon-essentials": "^7.6.7",
     "@storybook/addon-interactions": "^7.6.7",
     "@storybook/addon-links": "^7.6.7",
@@ -49,16 +51,18 @@
     "@storybook/test": "^7.6.7",
     "@storybook/vue3": "^7.6.7",
     "@storybook/vue3-vite": "^7.6.7",
+    "@vitejs/plugin-vue": "^5.0.2",
+    "@vue/test-utils": "^2.4.3",
+    "jsdom": "^23.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-typescript2": "^0.36.0",
     "storybook": "^7.6.7",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "@vitejs/plugin-vue": "^5.0.2",
-    "rollup-plugin-dts": "^6.1.0",
-    "rollup-plugin-typescript2": "^0.36.0",
     "vite-plugin-css-injected-by-js": "^3.3.1",
-    "vite-plugin-dts": "^3.7.0"
+    "vite-plugin-dts": "^3.7.0",
+    "vitest": "^1.1.2"
   }
 }
