--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build ",
-    "run-example": "cd src/example && vite",
+    "example": "cd src/example && vite",
     "test": "vitest",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
